<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <item android:title="@string/drawer_football_title">
        <menu>
            <item
                android:id="@+id/first_division"
                android:title="@string/first_division"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/second_division"
                android:title="@string/second_division"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/third_division"
                android:title="@string/third_division"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/greece"
                android:title="@string/greece"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/international"
                android:title="@string/international"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/under"
                android:title="@string/under"
                android:icon="@mipmap/ic_football"/>
        </menu>
    </item>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/other_sports"
                android:title="@string/other_sports"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/hot_break"
                android:title="@string/hot_break"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/gossip"
                android:title="@string/gossip"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/lifestyle"
                android:title="@string/lifestyle"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/car"
                android:title="@string/car"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/weird"
                android:title="@string/weird"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/sports_one_tv"
                android:title="@string/sports_one_tv"
                android:icon="@mipmap/ic_football"/>
            <item
                android:id="@+id/program"
                android:title="@string/program"
                android:icon="@mipmap/ic_football"/>
        </menu>
    </item>
</menu>